@@ -161,18 +161,23 @@ bool TextBox::click(s16 x, s16 y) {
 		if (isEnabled()) {
 			// Work out where in the string the textbox was clicked and move the cursor to that
 			// location
-			s16 clickX = x - getX();
-			s16 charX = _textX;
-			u32 charIndex = 0;
-			u8 charWidth = _font->getCharWidth(_text->getCharArray()[charIndex]);
 
-			while ((charX + charWidth < clickX) && (charIndex < _text->getLength())) {
-				charX += charWidth;
-				charWidth = _font->getCharWidth(_text->getCharArray()[charIndex]);
-				++charIndex;
+			if (_text->getLength() > 0) {
+				s16 clickX = x - getX();
+				s16 charX = _textX;
+				u32 charIndex = 0;
+
+				// Locate the first character that comes after the clicked character
+				while ((charX < clickX) && (charIndex < _text->getLength())) {
+					charX += _font->getCharWidth(_text->getCharArray()[charIndex]);
+					++charIndex;
+				}
+
+				// Move back to the clicked character
+				charIndex--;
+
+				moveCursorToPosition(charIndex);
 			}
-
-			moveCursorToPosition(charIndex);
 		}
 
 		return true;
